# vast-tools

./: .gitignore  .pep8speaks.yml  404.html  BUILDLIGHTCURVES.md  CHANGELOG.md  FINDSOURCES.md  LICENSE.txt  MANIFEST.in  PILOTFIELDSINFO.md  README.md  VASTDROPBOX.md  gen_doc_stubs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci-docs-test.yml  ci-docs.yml  lint.yml  pytest.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
LICENSE/: index.html
catalogue_crossmatching/: README.md  racs_crossmatch.py  racs_test4.csv
changelog/: index.html
code_of_conduct/: index.html
components/mocs/: index.html
components/pipeline/: index.html
components/query/: index.html
components/source/: index.html
components/survey/: index.html
components/tools/: index.html
contributing/develop/: index.html
contributing/docsdev/: index.html
contributing/github/: index.html
contributing/newepoch/: index.html
contributing/tests/: index.html
docs/: gen_doc_stubs.py  help_and_acknowledgements.md  index.md  notebook-examples
docs/components/: mocs.md  pipeline.md  query.md  source.md  survey.md  tools.md
docs/contributing/: develop.md  docsdev.md  github.md  newepoch.md  tests.md
docs/getting_started/: configuration.md  installation.md  introduction.md
docs/notebook-examples/: catalogue-crossmatching-example.ipynb  notebooks-overview.md  planet-hunting-example.ipynb  source-search-example-output  source-search-example.ipynb  using-vast-mocs-example.ipynb  vast-pipeline-example.ipynb  workshop-notebook-2023.ipynb
docs/scripts/: build_lightcurves.md  find_sources.md  pilot_fields_info.md
docs/theme/: home.html  main.html
docs/theme/css/: extra.css
extract_source/: README.md  find_racs.py
forced_phot/: __init__.py
getting_started/configuration/: index.html
getting_started/installation/: index.html
getting_started/introduction/: index.html
help_and_acknowledgements/: index.html
license/: index.html
notebook-examples/: catalogue-crossmatching-example.ipynb  planet-hunting-example.ipynb  source-search-example.ipynb  using-vast-mocs-example.ipynb  vast-pipeline-example.ipynb
notebook-examples/catalogue-crossmatching-example/: index.html
notebook-examples/notebooks-overview/: index.html
notebook-examples/planet-hunting-example/: index.html
notebook-examples/source-search-example/: index.html
notebook-examples/source-search-example-output/: PSR_J2129-0429_measurements.csv  find_fields_result.csv
notebook-examples/using-vast-mocs-example/: index.html
notebook-examples/vast-pipeline-example/: index.html
reference/moc/: index.html
reference/pipeline/: index.html
reference/query/: index.html
reference/source/: index.html
reference/survey/: index.html
reference/tools/: index.html
reference/utils/: index.html
scripts/build_lightcurves/: index.html
scripts/find_sources/: index.html
scripts/pilot_fields_info/: index.html
tests/: test_init.py  test_moc.py  test_pipeline.py  test_query.py  test_source.py  test_survey.py  test_tools.py  test_utils.py
tests/data/: VAST_0012-06A.EPOCH01.I.TEST.fits  psr-j2129-04-pipe-meas.csv  psr-j2129-04-query-meas.csv  recalc_sources_df_output.csv  test_images.csv  test_measurement_pairs.csv  test_measurements.csv  test_measurements_vaex.csv  test_pairs_df_result.csv  test_sources.csv  vast_epoch2_info.csv
tests/data/surveys_db/: description.csv
theme/: main.html
vasttools/: __init__.py  analysis.py  crosshair.py  estimate_noise.py  find_racs.py  find_sources.py  find_sources_example.py  fp.py  get_vast_pilot_dbx.py  input_example.csv  moc.py  pipeline.py  query.py  racs_crossmatch.py  run_BANE.py  run_bane.py  source.py  source_observability.py  survey.py  tools.py  utils.py  vast1_survey_status.csv
vasttools/data/: checksums.h5  dropbox_files.txt  racs_info.csv  vast_epoch01_info.csv  vast_epoch02_info.csv  vast_epoch05x_info.csv  vast_epoch06x_info.csv  vast_epoch07x_info.csv  vast_epoch08_info.csv  vast_epoch10x_info.csv  vast_epoch99_info.csv  vast_field_centres.csv
vasttools/data/csvs/: low_field_centres.csv  mid_field_centres.csv  racs_low_info.csv  vast_epoch01_info.csv  vast_epoch02_info.csv  vast_epoch03x_info.csv  vast_epoch04x_info.csv  vast_epoch05x_info.csv  vast_epoch06x_info.csv  vast_epoch07x_info.csv  vast_epoch08_info.csv  vast_epoch09_info.csv  vast_epoch10x_info.csv  vast_epoch11x_info.csv  vast_epoch12_info.csv  vast_epoch13_info.csv  vast_epoch17_info.csv  vast_epoch18_info.csv  vast_epoch19_info.csv  vast_epoch20_info.csv  vast_epoch21_info.csv  vast_epoch22_info.csv  vast_epoch23_info.csv  vast_epoch24_info.csv  vast_epoch25_info.csv  vast_epoch26_info.csv  vast_epoch27_info.csv  vast_epoch30_info.csv  vast_epoch31_info.csv  vast_epoch32_info.csv  vast_epoch33_info.csv  vast_epoch34_info.csv  vast_epoch35_info.csv  vast_epoch36_info.csv  vast_epoch37_info.csv  vast_epoch38_info.csv  vast_epoch39_info.csv  vast_epoch40_info.csv  vast_epoch41_info.csv  vast_epoch42_info.csv  (+33 more)
vasttools/data/mocs/: VAST_GALACTIC.moc.fits  VAST_HIGHDEC.moc.fits  VAST_PILOT.stmoc.fits  VAST_PILOT_EPOCH01.moc.fits  VAST_PILOT_EPOCH02.moc.fits  VAST_PILOT_EPOCH03x.moc.fits  VAST_PILOT_EPOCH04x.moc.fits  VAST_PILOT_EPOCH05x.moc.fits  VAST_PILOT_EPOCH06x.moc.fits  VAST_PILOT_EPOCH07x.moc.fits  VAST_PILOT_EPOCH08.moc.fits  VAST_PILOT_EPOCH09.moc.fits  VAST_PILOT_EPOCH10x.moc.fits  (+9 more)
(+302 files in other folders)
