[tool.poetry]
name = "vasttools"
version = "3.1.1-dev"
description = "Python module to interact with ASKAP VAST data."
license = "MIT"
homepage = "https://github.com/askap-vast/vasttools/"
authors = ["Adam Stewart <adam.stewart.astro@gmail.com>", "Dougal Dobie <d.dobie@sydney.edu.au>"]
include = ["vasttools/data", "example_notebooks"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
astropy = "^5.2"
astroquery = "^0"
bokeh = "^2.1.1"
colorcet = "^3.0"
colorlog = "^4.1.0"
dask = {version = "^2022.01.0", extras = ["dataframe"]}
forced-phot = { git = "https://github.com/askap-vast/forced_phot.git" }
matplotlib = "^3.7.0"
mocpy = "^0.11"
multiprocessing-logging = "^0.3.1"
numexpr = "^2.7.1"
numpy = "~1.22.1"
pandas = "<2.0"
pyarrow = "^11.0.0"
radio-beam = "^0"
scipy = "^1.4.1"
tables = "^3.6.1"
tabulate = "^0"
vaex-core = "^4.5.0"
vaex-hdf5 = "^0"
healpy = "^1.15.0"
svgpath2mpl = "^1.0.0"
setuptools = "^70.0.0"
pydantic = "<2.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.6"
jupyterlab = "^3.6.7"
jupyterlab-execute-time = "^2.0.2"
jupyterlab-system-monitor = "^0.8.0"
mkdocs-material = "^8.2.4"
mkdocstrings = {version = "^0.18", extras = ["python-legacy"]}
mkdocs-minify-plugin = "^0.4.1"
mkdocs-material-extensions = "^1.0.3"
mkdocs-gen-files = "^0.3.3"
mknotebooks = "^0.7.1"
Pygments = "^2.15.0"
lightgallery = "^0.5"
mkdocs-git-revision-date-localized-plugin = "^0.10.0"
pytest = "^7.0.0"
pytest-mock = "^3.6.1"
autopep8 = "^1.5.7"
pytest-cov = "^2.12.1"
flake8 = "^4.0.1"
jinja2 = "3.0.3"

[tool.poetry.scripts]
build_lightcurves = "vasttools.bin.build_lightcurves:main"
find_sources = "vasttools.bin.find_sources:main"
pilot_fields_info = "vasttools.bin.pilot_fields_info:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
