[tool.poetry]
name = "vasttools"
version = "3.2.0-dev"
description = "Python module to interact with ASKAP VAST data."
license = "MIT"
homepage = "https://github.com/askap-vast/vasttools/"
authors = ["Adam Stewart <adam.stewart.astro@gmail.com>", "Dougal Dobie <d.dobie@sydney.edu.au>"]
include = ["vasttools/data", "example_notebooks"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
astropy = "^5.2"
astroquery = "^0"
bokeh = "^3.1"
colorcet = "^3.1"
colorlog = "^6.1"
dask = {version = "^2022.01.0", extras = ["dataframe"]}
forced-phot = { git = "https://github.com/askap-vast/forced_phot.git" }
matplotlib = "^3.7.0"
mocpy = "^0.11"
multiprocessing-logging = "^0.3.1"
numexpr = "^2.7.1"
numpy = "~1.22.1"
pandas = "<2.0"
pyarrow = "^17.0"
radio-beam = "^0.3"
scipy = "^1.4"
tables = "^3.6.1"
tabulate = "^0"
vaex-core = "^4.17"
vaex-hdf5 = "^0.14"
healpy = "^1.15.0"
svgpath2mpl = "^1.0.0"
setuptools = "^70.0.0"
pydantic = "<2.0.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.6"
jupyterlab = "^3.6.7"
jupyterlab-execute-time = "^2.0.2"
jupyterlab-system-monitor = "^0.8.0"
mkdocs-material = "^9.4"
mkdocstrings = {version="^0.25", extras = ["python"]}
mkdocs-minify-plugin = "^0.4.1"
mkdocs-material-extensions = "^1.0.3"
mkdocs-gen-files = "^0.5"
mknotebooks = "^0.8"
Pygments = "^2.15.0"
mkdocs-git-revision-date-localized-plugin = "^1.2"
pytest = "^8.3"
pytest-mock = "^3.14"
autopep8 = "^2.3"
pytest-cov = "^5.0"
jinja2 = "3.0.3"
flake8 = {version="^7.1", python=">=3.8.1,<3.11"}

[tool.poetry.scripts]
build_lightcurves = "vasttools.bin.build_lightcurves:main"
find_sources = "vasttools.bin.find_sources:main"
pilot_fields_info = "vasttools.bin.pilot_fields_info:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
